--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "~1.4.5",
     "angular-material": "~0.11.0",
+    "angular-resource": "~1.4.6",
     "angular-ui-router": "~0.2.15"
   }
 }
