--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.5",
+    "angular-google-maps": "~2.2.1",
     "angular-material": "~0.11.0",
     "angular-resource": "~1.4.6",
     "angular-ui-router": "~0.2.15"
