--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "~1.4.5",
     "angular-google-maps": "~2.2.1",
     "angular-material": "~0.11.0",
+    "angular-messages": "~1.4.7",
     "angular-resource": "~1.4.6",
     "angular-ui-router": "~0.2.15"
   }
