--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-uglify": "^1.4.1",
     "gulp-webserver": "^0.9.1",
     "jshint": "^2.8.0",
+    "mongodb": "^2.0.45",
     "wiredep": "^2.2.2"
   }
 }
